--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "czt"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/stainless-steel/czt"
 homepage = "https://github.com/stainless-steel/czt"
 documentation = "https://stainless-steel.github.io/czt"
-description = "The package provides a chirp Z-transform algorithm."
+description = """
+The package provides an algorithm to compute the chirp Z-transform."""
 
 [dependencies]
 complex = "*"
