--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "czt"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/stainless-steel/czt"
@@ -10,8 +10,8 @@ description = """
 The package provides an algorithm to compute the chirp Z-transform."""
 
 [dependencies]
-complex = "*"
-dft = "*"
+complex = "0.7"
+dft = "0.2"
 
 [dev-dependencies]
-assert = "*"
+assert = "0.6"
