Update the authors list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "czt"
 version = "0.3.6"
 license = "Apache-2.0/MIT"
-authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
+authors = [
+    "Ivan Ukhov <ivan.ukhov@gmail.com>",
+    "Matthew Scheffel <mscheffel@gmail.com>",
+]
 description = "The package provides an algorithm to compute the chirp Z-transform."
 documentation = "https://docs.rs/czt"
 homepage = "https://github.com/stainless-steel/czt"
